fix: update and adding focus

--- a/src/layouts/main-layout/header/css/header-icon.css
+++ b/src/layouts/main-layout/header/css/header-icon.css
@@ -88,3 +88,11 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.user-avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  overflow: hidden;
+  cursor: pointer;
+}
