--- a/src/layouts/main-layout/header/css/header-icon.css
+++ b/src/layouts/main-layout/header/css/header-icon.css
@@ -15,6 +15,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 
 .icon-notification-version {
@@ -24,6 +25,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 
 .icon-store {
@@ -33,6 +35,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 
 .icon-invite {
@@ -42,6 +45,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 
 .icon-message {
@@ -51,6 +55,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 
 .icon-notification-user {
@@ -60,6 +65,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 
 .icon-more-menu {
@@ -69,6 +75,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 
 .icon-help {
@@ -78,6 +85,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 
 .icon-knowledge {
@@ -87,6 +95,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 
 .user-avatar {
